src/main/default/objects/Preventative_Maintenance_Schedule__c/Preventative_Maintenance_Schedule__c.object-meta.xml
<CustomObject>
    <label>Preventative Maintenance Schedule</label>
    <nameField>
        <displayFormat>PMS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preventative Maintenance Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>