src/main/default/objects/Preventative_Maintenance_Schedule__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Preventative Maintenance Schedules</relationshipLabel>
    <relationshipName>Preventative_Maintenance_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>