src/main/default/objects/Preventative_Maintenance_Schedule__c/fields/Grouping_Operator__c.field-meta.xml
<CustomField>
    <fullName>Grouping_Operator__c</fullName>
    <label>Grouping Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>