src/main/default/objects/Preventative_Maintenance_Schedule__c/fields/HasOpenWorkOrder__c.field-meta.xml
<CustomField>
    <fullName>HasOpenWorkOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>One or more WorkOrder with IsCompleted false value</description>
    <label>HasOpenWorkOrder</label>
    <type>Checkbox</type>
</CustomField>