src/main/default/objects/Preventative_Maintenance_Schedule__c/fields/Last_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Last_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Preventative Maintenance Schedules (Last Work Order)</relationshipLabel>
    <relationshipName>PMS</relationshipName>
    <type>Lookup</type>
</CustomField>