src/main/default/objects/Preventative_Maintenance_Schedule__c/fields/Template_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Template_Work_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Template Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Preventative Maintenance Schedules</relationshipLabel>
    <relationshipName>Preventative_Maintenance_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>