src/main/default/objects/Preventative_Maintenance_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Equipment__c</columns>
    <columns>Template_Work_Order__c</columns>
    <columns>Grouping_Operator__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>